# haskell-api-starter

./: .nvimrc  README.md  api.cabal  server.cabal
src/: Lib.hs  Main.hs
