name: api
version: 0.1.0
synopsis: A very simple HTTP API
category: Web
build-type: Simple
cabal-version: >=1.10

executable api
    main-is: Main.hs
    hs-source-dirs: src
    other-modules:
        Lib
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints
    build-depends:
        base >=4.11 && <4.12,
        bytestring >= 0.10.8 && < 0.11,
        http-types >= 0.12.1 && < 0.13,
        text >= 1.2.3 && < 1.3,
        wai >= 3.2.1 && < 3.3,
        warp >= 3.2.23 && < 3.3
