name: server
version: 0.1.0
synopsis: A very simple HTTP server
category: Web
build-type: Simple
cabal-version: >=1.10

executable server
    main-is: Main.hs
    hs-source-dirs: src
    other-modules:
        Lib
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints
    build-depends:
        base >=4.11 && <4.12,
        bytestring,
        http-types,
        text,
        wai,
        warp
